--- a/Handmade Quake/HandmadeQuake/HandmadeQuake.vcxproj
+++ b/Handmade Quake/HandmadeQuake/HandmadeQuake.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="..\q_stl.c" />
     <ClCompile Include="..\sys_win.c" />
     <ClCompile Include="..\vid_win.c" />
+    <ClCompile Include="..\wad.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="..\q_stl.h" />
     <ClInclude Include="..\sys.h" />
     <ClInclude Include="..\vid.h" />
+    <ClInclude Include="..\wad.h" />
     <ClInclude Include="..\winquake.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
