--- a/HandmadeQuake/HandmadeQuake.vcxproj
+++ b/HandmadeQuake/HandmadeQuake.vcxproj
@@ -147,11 +147,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\common.c" />
+    <ClCompile Include="..\host.c" />
     <ClCompile Include="..\q_stl.c" />
     <ClCompile Include="..\sys_win.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common.h" />
+    <ClInclude Include="..\Module2\host.h" />
     <ClInclude Include="..\quakedef.h" />
     <ClInclude Include="..\q_stl.h" />
     <ClInclude Include="..\winquake.h" />
