--- a/HandmadeQuake/HandmadeQuake.vcxproj
+++ b/HandmadeQuake/HandmadeQuake.vcxproj
@@ -150,12 +150,14 @@
     <ClCompile Include="..\host.c" />
     <ClCompile Include="..\q_stl.c" />
     <ClCompile Include="..\sys_win.c" />
+    <ClCompile Include="..\vid_win.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common.h" />
     <ClInclude Include="..\Module2\host.h" />
     <ClInclude Include="..\quakedef.h" />
     <ClInclude Include="..\q_stl.h" />
+    <ClInclude Include="..\vid.h" />
     <ClInclude Include="..\winquake.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
