Module 3.5, move keyboard management per frame and fix bug with QueryPerformanceCounter

--- a/HandmadeQuake/HandmadeQuake.vcxproj
+++ b/HandmadeQuake/HandmadeQuake.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="..\Module2\host.h" />
     <ClInclude Include="..\quakedef.h" />
     <ClInclude Include="..\q_stl.h" />
+    <ClInclude Include="..\sys.h" />
     <ClInclude Include="..\vid.h" />
     <ClInclude Include="..\winquake.h" />
   </ItemGroup>
