--- a/HandmadeQuake/HandmadeQuake.vcxproj.filters
+++ b/HandmadeQuake/HandmadeQuake.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="..\vid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\sys.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
